# wavelet-transformer

./: .gitignore  LICENSE  README.md  app.py  environment.yml  logging_config.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
app/: __init__.py  data_processing.py  input_output.py  plotting.py  regression_ui.py  types.py  ui.py
constants/: camme.py  ids.py  results_configs.py
sample_data/: brazil_inflation.csv  cpi.csv  durable_chg.csv  durables.csv  expectation.csv  nondurable_chg.csv  savings_chg.csv  savings_rate.csv
scripts/: data_generator.py
src/: cwt.py  descriptive_stats.py  dwt.py  filters.py  modwt.py  phase_diff_key.py  phase_diff_sines.py  process_camme.py  regression.py  retrieve_data.py  statistical_analysis.py  wavelet_plots.py  wct.py  xwt.py
src/utils/: config.py  file_helpers.py  helpers.py  logging_helpers.py  plot_helpers.py  pycwt_patches.py  transform_helpers.py  wavelet_helpers.py
tests/: test_cwt.py  test_descriptive_stats.py  test_dwt.py  test_process_camme.py  test_regression.py  test_retrieve_data.py  test_xwt.py
utils/: logging_config.py
