[project]
name = "wavelet-transfomer"
version = "0.2.0"
description = "An easy-to-use interface for anyone to test out wavelet analysis on their time series data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pycwt>=0.4.0b0",
    "python-dotenv>=1.1.1",
    "pywavelets>=1.9.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "xmltodict>=1.0.2",
]
